--- a/SRC/ApiGateway/ApiGateway.csproj
+++ b/SRC/ApiGateway/ApiGateway.csproj
@@ -1,19 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>b1819c2b-abcc-4a88-b0ae-9109b6140cba</UserSecretsId>
+    <AssemblyName>ApiGateway</AssemblyName>
+    <RootNamespace>ApiGateway</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\"/>
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168"/>
+    <PackageReference Include="Ocelot.Provider.Consul" Version="13.1.0-alpha0003"/>
+    <PackageReference Include="Ocelot" Version="13.1.0-alpha0003"/>
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.2-dev-00028"/>
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.2-dev-00187"/>
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.2-dev-00786"/>
+    <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.1-dev-00159"/>
   </ItemGroup>
-
 </Project>
