--- a/SRC/ApiGateway/ApiGateway.csproj
+++ b/SRC/ApiGateway/ApiGateway.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.HealthChecks" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168"/>
     <PackageReference Include="Ocelot.Provider.Consul" Version="13.1.0-alpha0003"/>
