--- a/SRC/Infrastructure.ServiceDiscovery/Infrastructure.ServiceDiscovery.csproj
+++ b/SRC/Infrastructure.ServiceDiscovery/Infrastructure.ServiceDiscovery.csproj
@@ -1,8 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+     <AssemblyName>QuickAir.Infrastructure.ServiceDiscovery</AssemblyName>
+    <RootNamespace>QuickAir.Infrastructure.ServiceDiscovery</RootNamespace>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Description>Infrastructure package for QuickAir sample application that contains helpers for registering services with the Consul discovery service.</Description>
+    <PackageProjectUrl>https://github.com/erick/QuickAir</PackageProjectUrl>
   </PropertyGroup>
+    <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
+    <PackageReference Include="Consul" Version="0.7.2.6" />
+  </ItemGroup>
 
 </Project>
